# tarotbot

./: .envrc  .gitignore  PRIVACY.md  README.md  backup  changeGuildSettings.py  components.py  db_test.py  discordbot.py  discordslash.py  handler.py  hello.py  main.py  main_interactions.py  pyproject.toml  requirements.txt  runDiscord.py  runTelegram.py  settings.db  shelve_to_sql.py  tarot.py  tmp.py  updateShelve.py
common/: db.py  eightball.py  layouts.py  oblique_strategies.py  tarot.py  tarot_backup.py
decks/playingcards/: default.json
decks/playingcards/distantearlywarning/: deck.json
decks/playingcards/standard/: deck.json
decks/tarot/: default.json
decks/tarot/etc/: deck.json
decks/tarot/kossatz/: deck.json
decks/tarot/planetscum/: deck.json
decks/tarot/rider-waite-smith/: deck.json
decks/tarot/swiss/: deck.json
discordbot/: changeGuildSettings.py  components.py  discordslash.py  handler.py  main.py  main_interactions.py  makeBackupFile.py  numServers.py
telegrambot/: main.py
