[project]
name = "tarotbot"
version = "2.0.0"
description = "A discord bot that does tarot readings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiodns==3.2.0",
    "aiohttp==3.9.5",
    "aiosignal==1.3.1",
    "anyio==4.4.0",
    "apscheduler==3.10.4",
    "async-timeout==4.0.3",
    "attrs==23.2.0",
    "brotli==1.1.0",
    "brotlipy==0.7.0",
    "cachetools==5.4.0",
    "cchardet==2.1.7",
    "certifi==2024.7.4",
    "cffi==1.16.0",
    "chardet==5.2.0",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "exceptiongroup==1.2.2",
    "frozenlist==1.4.1",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httpx==0.27.0",
    "idna==3.7",
    "msgspec==0.18.6",
    "multidict==6.0.5",
    "orjson==3.10.6",
    "pillow==10.4.0",
    "py-cord==2.6.0",
    "pycares==4.4.0",
    "pycparser==2.22",
    "python-dotenv==1.0.1",
    "python-telegram-bot==21.4",
    "pytz-deprecation-shim==0.1.0.post0",
    "pytz==2024.1",
    "rfc3986==2.0.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "tornado==6.4.1",
    "types-pillow==10.2.0.20240520",
    "typing-extensions==4.12.2",
    "tzdata==2024.1",
    "tzlocal==5.2",
    "yarl==1.9.4",
    "peewee>=3.17.8",
]
