[project]
name = "tarotbot"
version = "2.0.0"
description = "A discord bot that does tarot readings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiodns>=3.2.0",
    "aiohttp>=3.11.11",
    "aiosignal>=1.3.2",
    "anyio>=4.8.0",
    "apscheduler>=3.11.0",
    "async-timeout>=5.0.1",
    "attrs>=24.3.0",
    "brotli>=1.1.0",
    "brotlipy>=0.7.0",
    "cachetools>=5.5.0",
    "cchardet>=2.1.7",
    "certifi>=2024.12.14",
    "cffi>=1.17.1",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.1",
    "colorama>=0.4.6",
    "exceptiongroup>=1.2.2",
    "frozenlist>=1.5.0",
    "h11>=0.14.0",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "idna>=3.10",
    "msgspec>=0.19.0",
    "multidict>=6.1.0",
    "orjson>=3.10.14",
    "py-cord>=2.6.1",
    "pycares>=4.5.0",
    "pycparser>=2.22",
    "python-dotenv>=1.0.1",
    "pytz-deprecation-shim>=0.1.0.post0",
    "pytz>=2024.2",
    "rfc3986>=2.0.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "tornado>=6.4.2",
    "types-pillow>=10.2.0.20240822",
    "typing-extensions>=4.12.2",
    "tzdata>=2024.2",
    "tzlocal>=5.2",
    "yarl>=1.18.3",
    "peewee>=3.17.8",
    "pillow>=12.0.0",
    "pynacl>=1.6.0",
    "peewee-aio[aiosqlite]>=2.0.0",
]

[dependency-groups]
dev = [
    "pyinstrument>=5.1.1",
    "yappi>=1.7.3",
]
